src/objects/Codes__c.object
<CustomObject>
    <fields>
        <fullName>Code_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Master</label>
        <referenceTo>Code_Master__c</referenceTo>
        <relationshipLabel>Codes</relationshipLabel>
        <relationshipName>Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_System_Version__c</fullName>
        <label>Code System Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_System__c</fullName>
        <label>Code System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <label>Code Type</label>
        <picklist>
            <picklistValues>
                <fullName>SNOMED CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOINC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTCAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RxNorm (RXCUI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNOMED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caIntegrator_Value__c</fullName>
        <label>caIntegrator Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Codes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>